--- a/Snowapp/index copy.html
+++ b/Snowapp/index copy.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+    <div id=#background></div>
     <div class="container-fluid">
         <!-- The header starts here -->
         <div class="row">
@@ -22,7 +22,7 @@
                     </p>
             </div>
         </div>
-
+    </div>
 <!-- Table-->
     <div class="container">
       <div class="row margin-top-50">
